--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Evidence-First Founder - Ground every decision in evidence from great business books.">
+        content="FounderGPT - AI-powered advisor for founders. Ground every decision in evidence from great business books.">
     <meta name="theme-color" content="#141414">
-    <title>Evidence-First Founder</title>
+    <title>FounderGPT</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
