Add deployment configuration for Render and Vercel - Prepare for scoutmate.in hosting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="FounderGPT - AI-powered advisor for founders. Ground every decision in evidence from great business books.">
+        content="ScoutMate - AI-powered advisor for founders. Ground every startup decision in evidence from great business books.">
+    <meta name="keywords"
+        content="startup advisor, founder advice, business strategy, AI advisor, evidence-based decisions">
+    <meta name="author" content="ScoutMate">
     <meta name="theme-color" content="#141414">
-    <title>FounderGPT</title>
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://scoutmate.in/">
+    <meta property="og:title" content="ScoutMate - AI Advisor for Founders">
+    <meta property="og:description" content="Ground every startup decision in evidence from great business books.">
+
+    <title>ScoutMate - AI Advisor for Founders</title>
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
