--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Ground every startup decision in evidence from great business books.">
 
     <title>ScoutMate - AI Advisor for Founders</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -199,7 +199,7 @@
         </div>
     </div>
 
-    <script src="./app.js"></script>
+    <script src="/static/app.js"></script>
 </body>
 
 </html>
