Fix refresh modal: use inline styles to properly hide spinner and checkbox in production

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -187,7 +187,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h2 id="refresh-modal-title">↻ Refreshing Database</h2>
-                <button id="refresh-close-btn" class="close-btn hidden" aria-label="Close">×</button>
+                <button id="refresh-close-btn" class="close-btn" style="display: none;" aria-label="Close">×</button>
             </div>
             <div class="modal-body">
                 <div id="refresh-spinner" class="spinner"></div>
