--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="ScoutMate - AI-powered advisor for founders. Ground every startup decision in evidence from great business books.">
+        content="Convert chaos into clarity. An AI-powered advisor for founders navigating tough decisions.">
     <meta name="keywords"
-        content="startup advisor, founder advice, business strategy, AI advisor, evidence-based decisions">
+        content="Evidence-Based Answers, Startup Decisions, FounderGPT, AI advisor, startup books, actionable advice">
     <meta name="author" content="ScoutMate">
     <meta name="theme-color" content="#141414">
 
@@ -15,7 +15,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://scoutmate.in/">
     <meta property="og:title" content="ScoutMate - AI Advisor for Founders">
-    <meta property="og:description" content="Ground every startup decision in evidence from great business books.">
+    <meta property="og:description"
+        content="Turn your toughest founder questions into clear, actionable advice—backed by insights from trusted startup books and frameworks.">
 
     <title>ScoutMate - AI Advisor for Founders</title>
     <link rel="stylesheet" href="./styles.css">
@@ -85,9 +86,9 @@
         <!-- Main Page (Input) -->
         <div id="main-page" class="page">
             <div class="center-content">
-                <h1 class="main-title">What decision are you facing?</h1>
-                <p class="main-subtitle">Describe your situation. We'll break it down and ground every answer in
-                    evidence.</p>
+                <h1 class="main-title">FounderGPT: Evidence-Based Answers for Startup Decisions</h1>
+                <p class="main-subtitle">Turn your toughest founder questions into clear, actionable advice—backed by
+                    insights from trusted startup books and frameworks.</p>
 
                 <div class="input-container">
                     <div class="custom-select-container" id="custom-category-select">
@@ -105,6 +106,46 @@
                         placeholder='e.g. "Users say they like it but won&apos;t pay"' rows="5"></textarea>
 
                     <button id="analyze-btn" class="analyze-btn" disabled>Analyze with Evidence</button>
+                </div>
+            </div>
+
+            <div class="features-section">
+                <div class="features-intro">
+                    <h2>Convert chaos into clarity.</h2>
+                    <p>FounderGPT takes messy, unstructured founder input and returns structured, evidence-backed advice
+                        using content from curated startup books and articles stored in a vector database. Powered by
+                        Cohere embeddings, Qdrant vector search, and a multi-LLM fallback system (Claude → OpenAI →
+                        Gemini).</p>
+                </div>
+                <div class="features-grid">
+                    <div class="feature-item">
+                        <span class="feature-icon">🔍</span>
+                        <span class="feature-text">RAG-powered answers from curated startup literature</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🔄</span>
+                        <span class="feature-text">Multi-LLM fallback (Claude Sonnet 4.5 → GPT-4o → Gemini Flash)</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">📚</span>
+                        <span class="feature-text">Cohere embeddings & reranking for high-quality retrieval</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🎯</span>
+                        <span class="feature-text">Confidence scoring for every cited source</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">📖</span>
+                        <span class="feature-text">Evidence-based responses with book/article citations</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🏷️</span>
+                        <span class="feature-text">Category management for organizing resources</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🔐</span>
+                        <span class="feature-text">Admin authentication for resource management</span>
+                    </div>
                 </div>
             </div>
 
