Refine landing page: Simplify heading and remove features section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,9 +86,8 @@
         <!-- Main Page (Input) -->
         <div id="main-page" class="page">
             <div class="center-content">
-                <h1 class="main-title">FounderGPT: Evidence-Based Answers for Startup Decisions</h1>
-                <p class="main-subtitle">Turn your toughest founder questions into clear, actionable advice—backed by
-                    insights from trusted startup books and frameworks.</p>
+                <h1 class="main-title">FounderGPT</h1>
+                <p class="main-subtitle">Evidence-based answers for startup decisions.</p>
 
                 <div class="input-container">
                     <div class="custom-select-container" id="custom-category-select">
@@ -109,45 +108,6 @@
                 </div>
             </div>
 
-            <div class="features-section">
-                <div class="features-intro">
-                    <h2>Convert chaos into clarity.</h2>
-                    <p>FounderGPT takes messy, unstructured founder input and returns structured, evidence-backed advice
-                        using content from curated startup books and articles stored in a vector database. Powered by
-                        Cohere embeddings, Qdrant vector search, and a multi-LLM fallback system (Claude → OpenAI →
-                        Gemini).</p>
-                </div>
-                <div class="features-grid">
-                    <div class="feature-item">
-                        <span class="feature-icon">🔍</span>
-                        <span class="feature-text">RAG-powered answers from curated startup literature</span>
-                    </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">🔄</span>
-                        <span class="feature-text">Multi-LLM fallback (Claude Sonnet 4.5 → GPT-4o → Gemini Flash)</span>
-                    </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">📚</span>
-                        <span class="feature-text">Cohere embeddings & reranking for high-quality retrieval</span>
-                    </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">🎯</span>
-                        <span class="feature-text">Confidence scoring for every cited source</span>
-                    </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">📖</span>
-                        <span class="feature-text">Evidence-based responses with book/article citations</span>
-                    </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">🏷️</span>
-                        <span class="feature-text">Category management for organizing resources</span>
-                    </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">🔐</span>
-                        <span class="feature-text">Admin authentication for resource management</span>
-                    </div>
-                </div>
-            </div>
 
             <footer class="footer">
                 <p>Powered by evidence from great business books. No hallucinated advice.</p>
