feat: replace intent classifier with manual category selection and cleanup

--- a/backup_v1/frontend/index.html
+++ b/backup_v1/frontend/index.html
@@ -78,7 +78,7 @@
                 <div class="input-container">
                     <div class="custom-select-container" id="custom-category-select">
                         <div class="select-trigger" id="select-trigger">
-                            <span>Select Category</span>
+                            <span>Available categories</span>
                             <span class="arrow">▼</span>
                         </div>
                         <div class="select-options hidden" id="select-options">
