--- a/backups/v2_full/frontend/index.html
+++ b/backups/v2_full/frontend/index.html
@@ -78,7 +78,7 @@
                 <div class="input-container">
                     <div class="custom-select-container" id="custom-category-select">
                         <div class="select-trigger" id="select-trigger">
-                            <span>Select Category</span>
+                            <span>Available categories</span>
                             <span class="arrow">▼</span>
                         </div>
                         <div class="select-options hidden" id="select-options">
