feat: timing instrumentation & latency optimization (reduced top_k, simplified prompts)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,6 +127,10 @@
                     <p id="evidence-summary" class="evidence-text"></p>
                 </div>
 
+                <div id="timing-stats" class="timing-stats hidden">
+                    <!-- Timing stats populated by JS -->
+                </div>
+
                 <div class="questions-section">
                     <h3 id="questions-header" class="questions-header">DECOMPOSED QUESTIONS (0)</h3>
                     <div id="questions-list" class="questions-list">
